segment.io support

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,9 @@
 <!doctype HTML>
 <html lang="en">
     <head>
+        {% if segmentio_write_key %}
+        <script type="text/javascript">window.analytics=window.analytics||[],window.analytics.methods=["identify","group","track","page","pageview","alias","ready","on","once","off","trackLink","trackForm","trackClick","trackSubmit"],window.analytics.factory=function(t){return function(){var a=Array.prototype.slice.call(arguments);return a.unshift(t),window.analytics.push(a),window.analytics}};for(var i=0;i<window.analytics.methods.length;i++){var key=window.analytics.methods[i];window.analytics[key]=window.analytics.factory(key)}window.analytics.load=function(t){if(!document.getElementById("analytics-js")){var a=document.createElement("script");a.type="text/javascript",a.id="analytics-js",a.async=!0,a.src=("https:"===document.location.protocol?"https://":"http://")+"cdn.segment.io/analytics.js/v1/"+t+"/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(a,n)}},window.analytics.SNIPPET_VERSION="2.0.9",window.analytics.load("{{ segmentio_write_key }}");window.analytics.page();</script>
+        {% endif %}
         <title>{% block title %}{% end %} | Decss Sync</title>
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
@@ -9,6 +12,9 @@
             #ft .navbar-text { color: #ccc; text-align: center; float: none; }
             #ft .navbar-text a { color: #ccc; border-bottom: 1px solid #555; }
         </style>
+        {% if user and segmentio_write_key %}
+        <script>window.analytics.identify('{{ user.username }}');</script>
+        {% endif %}
     </head>
     <body>
         <nav class="navbar navbar-fixed-top navbar-inverse">
